# rummy-ocaml

./: .gitignore  dune-project  run.sh
.github/: copilot-instructions.md
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/.js/default/abstract_algebra/: abstract_algebra.cma.js
_build/default/.js/default/angstrom/: angstrom.cma.js
_build/default/.js/default/async_durable/: async_durable.cma.js
_build/default/.js/default/async_js/: async_js.cma.js
_build/default/.js/default/async_kernel.config/: async_kernel_config.cma.js
_build/default/.ppx/7c54b8bb24dc88752a445fdeda873385/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/src/: ai.pp.ml  engine.pp.ml  rules.ml  rules.pp.ml  rummy_engine.cma  rummy_engine.ml-gen  setup.pp.ml  types.ml  types.pp.ml
_build/default/src/.merlin-conf/: lib-rummy_engine
_build/default/src/.rummy_engine.objs/: rummy_engine__Ai.impl.all-deps  rummy_engine__Ai.impl.d  rummy_engine__Engine.impl.all-deps  rummy_engine__Engine.impl.d  rummy_engine__Rules.impl.d  rummy_engine__Setup.impl.all-deps  rummy_engine__Setup.impl.d  rummy_engine__Types.impl.d
_build/default/ui_bonsai/src/: app.ml  app.pp.ml
docs/: CNAME  index.html
src/: ai.ml  dune  engine.ml  firebase_client.ml  firebase_config.ml  http_client.ml  main.ml  rules.ml  setup.ml  types.ml
src/test/: dune  engine_expect_tests.ml  engine_random_tests.ml  smoke.ml  test_engine.ml
ui/: discard.html  draw.html  style.css
ui_bonsai/src/: app.ml  dune  firestore.ml  index.html  listener.js
(+127 files in other folders)
